--- a/src/components/sections/Products.astro
+++ b/src/components/sections/Products.astro
@@ -1,8 +1,8 @@
-<section id="products" class="lg:mx-36 min-h-[700px] -mt-36 pt-44">
+<section id="products" class="lg:mx-36 -mt-36 pt-44">
   <img
     src="/src/assets/products.webp"
     alt="Products logo"
-    class="h-[130px] md:h-[160px] lg:h-[215px] w-auto mx-auto my-6 md:mt-16"
+    class="h-[130px] md:h-[160px] lg:h-[215px] w-auto mx-auto my-6 mt-16"
   />
   <p class="mx-10 sm:mx-16 md:mx-28 text-[#452B1F]">
     Tortor vulputate netus nam sagittis, imperdiet pharetra porttitor taciti
