--- a/src/components/sections/Footer.astro
+++ b/src/components/sections/Footer.astro
@@ -1,5 +1,6 @@
 ---
 import { officialStoreInfo } from "../../constants/storeInfo";
+import Socials from "../ui/Socials.astro";
 
 const name = officialStoreInfo().name;
 const address = officialStoreInfo().address;
@@ -10,6 +11,7 @@ const address = officialStoreInfo().address;
     <h2 class="text-lg md:text-xl">{name}</h2>
     <h2 class="text-sm md:text-md">{address} MA</h2>
     <h3 class="text-sm md:text-md">Serving The Community Since 2004</h3>
+    <Socials bgColor="#7F0201" hoverColor="#A52A2A" />
   </div>
   <h3 class="text-widest text-base pt-4 md:text-md">
     <a href="https://www.jdegaetano.com" target="_blank"
