--- a/src/components/layouts/Layout.astro
+++ b/src/components/layouts/Layout.astro
@@ -26,6 +26,14 @@ const apiKey = import.meta.env.PUBLIC_GOOGLE_API_KEY as string;
       crossorigin
     />
     <link
+      rel="preload"
+      href="/path/to/Sanelma.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
+
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
     />
