--- a/src/components/sections/Footer.astro
+++ b/src/components/sections/Footer.astro
@@ -18,4 +18,11 @@ const address = officialStoreInfo().address;
       >Designed and Developed by Justin DeGaetano</a
     >
   </h3>
+  <h3>
+    Fonts made by <a href="http://www.webfontfree.com" target="_blank"
+      >Web Free Fonts</a
+    > is licensed by <a
+      href="http://creativecommons.org/licenses/by/4.0/"
+      target="_blank">CC 4.0 BY</a>
+  </h3>
 </section>
