--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -10,4 +10,4 @@ if (!session) {
 ---
 
 <h1>Sign In</h1>
-<Auth provider="github"> Sign in with GitHub </Auth>
+<Auth {...{ provider: "github" }}>Sign in with GitHub</Auth>
