--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -10,14 +10,16 @@ import ExternalLinks from "../sections/ExternalLinks.astro";
   <img
     src="/src/assets/brass-hero-top.webp"
     alt="Brass fixture section divider"
-    class="absolute top-6 object-cover h-1/3 2xl:h-1/2 w-auto mx-auto"
+    class="absolute top-6 object-cover h-1/4 md:h-1/3 2xl:h-1/2 w-auto mx-auto"
   />
   <img
     src="src/assets/logo.webp"
     alt="PT Pet Supply logo"
-    class="absolute top-0 object-contain h-[280px] md:h-[300px] xl:h-[340px] 2xl:h-[440px] w-auto p-3 drop-shadow-2xl z-10"
+    class="absolute -top-2 object-contain h-[240px] md:h-[300px] xl:h-[340px] 2xl:h-[440px] w-auto p-3 drop-shadow-2xl z-10"
   />
-  <div class="absolute top-60 md:top-64 xl:top-72">
+  <div
+    class="absolute flex flex-col justify-center items-center top-48 md:top-64 xl:top-72"
+  >
     <a
       href="https://www.google.com/maps/place/P+T+Pet+Supply/@42.0714526,-71.8662691,17z/data=!4m6!3m5!1s0x89e41ed7234c136d:0xe30644b400274c0!8m2!3d42.0714526!4d-71.8662691!16s%2Fg%2F1tt1tq6m?entry=ttu&g_ep=EgoyMDI0MTAxNC4wIKXMDSoASAFQAw%3D%3D"
       target="_blank"
@@ -25,23 +27,39 @@ import ExternalLinks from "../sections/ExternalLinks.astro";
       <img
         src="src/assets/address-sign.webp"
         alt="Address sign"
-        class="object-contain h-[75px] md:h-[80px] xl:h-[85px] xl:mt-2 2xl:h-[105px] 2xl:mt-24 w-auto pt-2 px-3 drop-shadow-2xl -z-20"
+        class="object-contain h-[55px] md:h-[80px] xl:h-[85px] mt-2 xl:mt-2.5 2xl:h-[105px] 2xl:mt-24 w-auto pt-2 px-3 drop-shadow-2xl -z-20"
       />
     </a>
 
-    <Socials bgColor="#7F0201" hoverColor="#A52A2A" />
-    <ExternalLinks />
+    <div class="chalkboard flex flex-col items-center">
+      <img
+        src="/src/assets/horizontal-chalkboard.webp"
+        alt="Chalkboard"
+        class="hidden md:block w-[600px] absolute -bottom-8 px-2"
+      />
+      <img
+        src="/src/assets/vertical-chalkboard.webp"
+        alt="Chalkboard"
+        class="block md:hidden w-[300px] absolute -bottom-44 -mx-5 mr-8"
+      />
+
+      <ExternalLinks />
+
+      <div class="pt-28">
+        <Socials bgColor="#7F0201" hoverColor="#A52A2A" />
+      </div>
+    </div>
   </div>
 
   <img
     src="/src/assets/mainecoon.png"
     alt="Maine Coon"
-    class="absolute -bottom-8 min-[1350px]:-bottom-12 2xl:-bottom-40 left-0 -ml-16 sm:-ml-10 md:-ml-28 lg:ml-20 xl:ml-30 min-[1800px]:ml-48 min-[350px]:h-[330px] min-[475px]:h-[370px] md:h-[480px] xl:h-[600px] drop-shadow-2xl w-auto max-h-[700px] object-contain -mb-48 md:-mb-80"
+    class="absolute -bottom-12 min-[1350px]:-bottom-12 2xl:-bottom-40 left-0 -ml-20 min-[380px]:-ml-16 min-[550px]:-ml-8 min-[610px]:-ml-4 md:-ml-28 lg:ml-20 xl:ml-30 min-[1800px]:ml-48 min-[320px]:h-[330px] min-[475px]:h-[370px] md:h-[480px] xl:h-[600px] drop-shadow-2xl w-auto max-h-[700px] object-contain -mb-48 md:-mb-80"
   />
   <img
     src="/src/assets/husky.png"
     alt="Siberian Husky"
-    class="absolute -bottom-8 min-[1350px]:-bottom-12 2xl:-bottom-40 right-0 -mr-20 sm:-mr-14 md:-mr-32 lg:mr-14 xl:mr-30 min-[1800px]:mr-48 min-[350px]:h-[330px] min-[475px]:h-[370px] md:h-[480px] xl:h-[600px] drop-shadow-2xl w-auto max-h-[700px] object-contain -mb-48 md:-mb-80"
+    class="absolute -bottom-12 min-[1350px]:-bottom-12 2xl:-bottom-40 right-0 -mr-24 min-[380px]:-mr-20 min-[550px]:-mr-12 min-[610px]:-mr-6 md:-mr-32 lg:mr-14 xl:mr-30 min-[1800px]:mr-48 min-[320px]:h-[330px] min-[475px]:h-[370px] md:h-[480px] xl:h-[600px] drop-shadow-2xl w-auto max-h-[700px] object-contain -mb-48 md:-mb-80"
   />
 
   <img
