--- a/src/components/ui/Buffer.astro
+++ b/src/components/ui/Buffer.astro
@@ -2,7 +2,7 @@
   class="relative mx-auto flex flex-col items-center h-[210px] sm:h-[280px] md:h-[330px] lg:h-[472px]"
 >
   <img
-    src="/src/assets/animals.png"
+    src="/src/assets/animals.webp"
     alt="Many animals in a row"
     class="absolute inset-0 left-1/2 transform -translate-x-1/2 w-full h-full object-cover z-[-2]"
   />
