--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,6 +16,15 @@
     font-style: normal;
     font-display: swap;
   }
+
+  @font-face {
+    font-family: "Sanelma";
+    src:
+      url("/fonts/SanelmaW00-Regular.woff2") format("woff2");
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+  }
 }
 
 [x-cloak] {
@@ -50,4 +59,23 @@ html {
 
 .animate-slide-in {
   animation: slideInFromTop 0.5s ease-out forwards;
+}
+
+.jiggle {
+  animation: jiggle 0.6s ease;
+}
+
+@keyframes jiggle {
+  0%, 100% {
+    transform: rotate(0);
+  }
+  25% {
+    transform: rotate(3deg);
+  }
+  50% {
+    transform: rotate(-3deg);
+  }
+  75% {
+    transform: rotate(1deg);
+  }
 }
