--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -5,48 +5,50 @@ import ExternalLinks from "../sections/ExternalLinks.astro";
 
 <section
   id="hero"
-  class="relative mx-auto flex flex-col items-center min-h-[400px] h-80 md:h-96"
+  class="relative mx-auto flex flex-col items-center min-h-[400px] max-w-none"
 >
   <img
     src="/src/assets/brass-hero-top.webp"
     alt="Brass fixture section divider"
-    class="absolute top-6 object-cover h-1/4 md:h-1/3 2xl:h-1/2 w-auto mx-auto"
+    class="absolute top-6 object-cover h-1/4 md:h-1/3 xl:h-2/5 2xl:h-1/2 w-auto mx-auto"
   />
   <img
     src="src/assets/logo.webp"
     alt="PT Pet Supply logo"
-    class="absolute -top-2 object-contain h-[240px] md:h-[300px] xl:h-[340px] 2xl:h-[440px] w-auto p-3 drop-shadow-2xl z-10"
+    class="absolute object-contain h-[255px] md:h-[300px] xl:h-[350px] 2xl:h-[440px] w-auto pt-2 drop-shadow-2xl z-10"
   />
-  <div
-    class="absolute flex flex-col justify-center items-center top-48 md:top-64 xl:top-72"
-  >
-    <a
-      href="https://www.google.com/maps/place/P+T+Pet+Supply/@42.0714526,-71.8662691,17z/data=!4m6!3m5!1s0x89e41ed7234c136d:0xe30644b400274c0!8m2!3d42.0714526!4d-71.8662691!16s%2Fg%2F1tt1tq6m?entry=ttu&g_ep=EgoyMDI0MTAxNC4wIKXMDSoASAFQAw%3D%3D"
-      target="_blank"
-    >
-      <img
-        src="src/assets/address-sign.webp"
-        alt="Address sign"
-        class="object-contain h-[55px] md:h-[80px] xl:h-[85px] mt-2 xl:mt-2.5 2xl:h-[105px] 2xl:mt-24 w-auto pt-2 px-3 drop-shadow-2xl -z-20"
-      />
-    </a>
 
+  <a
+    href="https://www.google.com/maps/place/P+T+Pet+Supply/@42.0714526,-71.8662691,17z/data=!4m6!3m5!1s0x89e41ed7234c136d:0xe30644b400274c0!8m2!3d42.0714526!4d-71.8662691!16s%2Fg%2F1tt1tq6m?entry=ttu&g_ep=EgoyMDI0MTAxNC4wIKXMDSoASAFQAw%3D%3D"
+    target="_blank"
+    class="absolute top-60 md:top-70 xl:top-78 2xl:top-104"
+  >
+    <img
+      src="src/assets/address-sign.webp"
+      alt="Address sign"
+      class="object-contain h-[55px] md:h-[70px] xl:h-[80px] 2xl:h-[105px] w-auto drop-shadow-2xl -z-20"
+    />
+  </a>
+
+  <div class="flex flex-col justify-center items-center">
     <div class="chalkboard flex flex-col items-center">
       <img
         src="/src/assets/horizontal-chalkboard.webp"
         alt="Chalkboard"
-        class="hidden md:block w-[600px] absolute -bottom-8 px-2"
+        class="hidden md:block h-auto w-[500px] xl:w-[600px] 2xl:w-[700px] absolute -bottom-56 xl:-bottom-78 2xl:-bottom-120 mr-12 xl:mr-16"
       />
       <img
         src="/src/assets/vertical-chalkboard.webp"
         alt="Chalkboard"
-        class="block md:hidden w-[300px] absolute -bottom-44 -mx-5 mr-8"
+        class="block md:hidden w-[230px] absolute -bottom-68 -mx-5 mr-7"
       />
+    </div>
 
+    <div class="absolute top-74 md:top-84 xl:top-100 2xl:top-124">
       <ExternalLinks />
 
-      <div class="pt-28">
-        <Socials bgColor="#7F0201" hoverColor="#A52A2A" />
+      <div class="pt-27 md:pt-13 xl:pt-16 2xl:pt-22">
+        <Socials hoverColor="#A52A2A" />
       </div>
     </div>
   </div>
@@ -54,22 +56,22 @@ import ExternalLinks from "../sections/ExternalLinks.astro";
   <img
     src="/src/assets/mainecoon.png"
     alt="Maine Coon"
-    class="absolute -bottom-12 min-[1350px]:-bottom-12 2xl:-bottom-40 left-0 -ml-20 min-[380px]:-ml-16 min-[550px]:-ml-8 min-[610px]:-ml-4 md:-ml-28 lg:ml-20 xl:ml-30 min-[1800px]:ml-48 min-[320px]:h-[330px] min-[475px]:h-[370px] md:h-[480px] xl:h-[600px] drop-shadow-2xl w-auto max-h-[700px] object-contain -mb-48 md:-mb-80"
+    class="absolute -bottom-14 xl:-bottom-32 2xl:-bottom-64 left-0 -ml-24 min-[380px]:-ml-16 min-[550px]:-ml-8 min-[610px]:-ml-4 min-[670px]:ml-2 md:-ml-28 min-[800px]:-ml-14 lg:ml-10 xl:ml-30 2xl:ml-24 min-[1650px]:ml-36 min-[1800px]:ml-48 min-[2000px]:ml-74 min-[320px]:h-[330px] min-[475px]:h-[370px] md:h-[480px] xl:h-[600px] drop-shadow-2xl w-auto max-h-[700px] object-contain -mb-48 md:-mb-80"
   />
   <img
     src="/src/assets/husky.png"
     alt="Siberian Husky"
-    class="absolute -bottom-12 min-[1350px]:-bottom-12 2xl:-bottom-40 right-0 -mr-24 min-[380px]:-mr-20 min-[550px]:-mr-12 min-[610px]:-mr-6 md:-mr-32 lg:mr-14 xl:mr-30 min-[1800px]:mr-48 min-[320px]:h-[330px] min-[475px]:h-[370px] md:h-[480px] xl:h-[600px] drop-shadow-2xl w-auto max-h-[700px] object-contain -mb-48 md:-mb-80"
+    class="absolute -bottom-14 xl:-bottom-32 2xl:-bottom-64 right-0 -mr-28 min-[380px]:-mr-20 min-[550px]:-mr-12 min-[610px]:-mr-6 min-[670px]:-mr-0 md:-mr-32 min-[800px]:-mr-20 lg:mr-4 xl:mr-30 2xl:mr-20 min-[1650px]:mr-32 min-[1800px]:mr-44 min-[2000px]:mr-70 min-[320px]:h-[330px] min-[475px]:h-[370px] md:h-[480px] xl:h-[600px] drop-shadow-2xl w-auto max-h-[700px] object-contain -mb-48 md:-mb-80"
   />
 
   <img
     src="/src/assets/landscape.png"
     alt="Background landscape"
-    class="absolute inset-0 left-1/2 transform -translate-x-1/2 w-full h-full min-[1350px]:h-[450px] 2xl:h-[570px] object-cover z-[-2]"
+    class="absolute inset-0 left-1/2 transform -translate-x-1/2 w-full h-full xl:h-[450px] 2xl:h-[570px] object-cover z-[-2]"
   />
   <img
     src="/src/assets/fence.png"
     alt="Background picket fence"
-    class="absolute bottom-14 2xl:-bottom-4 left-1/2 transform -translate-x-1/2 w-full h-[63%] min-[1350px]:h-[69%] 2xl:h-[95%] max-w-none object-cover -mb-28 md:-mb-36 min-[1350px]:-mb-48 2xl:-mb-72 z-[-1]"
+    class="absolute bottom-14 2xl:-bottom-4 left-1/2 transform -translate-x-1/2 w-full h-[63%] xl:h-[69%] 2xl:h-[95%] max-w-none object-cover -mb-28 md:-mb-36 xl:-mb-48 2xl:-mb-72 z-[-1]"
   />
 </section>
