Configure postfix-relay for contact form

--- a/src/components/sections/Products.astro
+++ b/src/components/sections/Products.astro
@@ -1,4 +1,7 @@
-<section id="products" class="lg:mx-36 -mt-36 pt-44">
+<section
+  id="products"
+  class="md:mx-12 lg:mx-36 xl:mx-48 2xl:mx-64 min-[1700px]:mx-80 min-[1900px]:mx-110 -mt-36 pt-32 xl:pt-44"
+>
   <img
     src="/src/assets/products.webp"
     alt="Products logo"
