--- a/src/components/sections/Footer.astro
+++ b/src/components/sections/Footer.astro
@@ -1,6 +1,5 @@
 ---
 import { officialStoreInfo } from "../../constants/storeInfo";
-import Socials from "../ui/Socials.astro";
 
 const name = officialStoreInfo().name;
 const address = officialStoreInfo().address;
@@ -11,7 +10,6 @@ const address = officialStoreInfo().address;
     <h2 class="text-lg md:text-xl">{name}</h2>
     <h2 class="text-sm md:text-md">{address} MA</h2>
     <h3 class="text-sm md:text-md">Serving The Community Since 2004</h3>
-    <Socials bgColor="#7F0201" hoverColor="#A52A2A" />
   </div>
   <h3 class="text-widest text-base pt-4 md:text-md">
     <a href="https://www.jdegaetano.com" target="_blank"
@@ -23,6 +21,7 @@ const address = officialStoreInfo().address;
       >Web Free Fonts</a
     > is licensed by <a
       href="http://creativecommons.org/licenses/by/4.0/"
-      target="_blank">CC 4.0 BY</a>
+      target="_blank">CC 4.0 BY</a
+    >
   </h3>
 </section>
