--- a/src/components/sections/Grooming.astro
+++ b/src/components/sections/Grooming.astro
@@ -1,6 +1,6 @@
 <section
   id="grooming"
-  class="lg:mx-36 min-h-[700px] -mt-36 mb-24 min-[1077px]:mb-48 min-[1298px]:mb-28 pt-44"
+  class="md:mx-12 lg:mx-36 xl:mx-48 2xl:mx-64 min-[1700px]:mx-80 min-[1900px]:mx-110 min-h-[700px] -mt-36 mb-32 min-[1077px]:mb-48 min-[1298px]:mb-28 pt-44"
 >
   <img
     src="/src/assets/pet-grooming.webp"
@@ -19,7 +19,9 @@
     with dremmeling being a smoother, more rounded alternative to traditional clipping.
     These services help maintain a pet’s hygiene, appearance, and comfort.
   </p>
-  <p class="mx-24 sm:mx-36 md:mx-48 text-[#452B1F] text-center mt-4 lg:mb-36">
+  <p
+    class="mx-16 sm:mx-36 md:mx-48 text-[#452B1F] text-center font-bold mt-6 lg:mb-36"
+  >
     Prices vary depending on the breed and size of the dog.
     <br />
     <br />
