--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -54,18 +54,18 @@ import ExternalLinks from "../sections/ExternalLinks.astro";
   </div>
 
   <img
-    src="/src/assets/mainecoon.png"
+    src="/src/assets/mainecoon.webp"
     alt="Maine Coon"
     class="absolute -bottom-14 xl:-bottom-32 2xl:-bottom-64 left-0 -ml-24 min-[380px]:-ml-16 min-[550px]:-ml-8 min-[610px]:-ml-4 min-[670px]:ml-2 md:-ml-28 min-[800px]:-ml-14 lg:ml-10 xl:ml-30 2xl:ml-24 min-[1650px]:ml-36 min-[1800px]:ml-48 min-[2000px]:ml-74 min-[320px]:h-[330px] min-[475px]:h-[370px] md:h-[480px] xl:h-[600px] drop-shadow-2xl w-auto max-h-[700px] object-contain -mb-48 md:-mb-80"
   />
   <img
-    src="/src/assets/husky.png"
+    src="/src/assets/husky.webp"
     alt="Siberian Husky"
     class="absolute -bottom-14 xl:-bottom-32 2xl:-bottom-64 right-0 -mr-28 min-[380px]:-mr-20 min-[550px]:-mr-12 min-[610px]:-mr-6 min-[670px]:-mr-0 md:-mr-32 min-[800px]:-mr-20 lg:mr-4 xl:mr-30 2xl:mr-20 min-[1650px]:mr-32 min-[1800px]:mr-44 min-[2000px]:mr-70 min-[320px]:h-[330px] min-[475px]:h-[370px] md:h-[480px] xl:h-[600px] drop-shadow-2xl w-auto max-h-[700px] object-contain -mb-48 md:-mb-80"
   />
 
   <img
-    src="/src/assets/landscape.png"
+    src="/src/assets/landscape.webp"
     alt="Background landscape"
     class="absolute inset-0 left-1/2 transform -translate-x-1/2 w-full h-full xl:h-[450px] 2xl:h-[570px] object-cover z-[-2]"
   />
