--- a/src/components/sections/Navbar.astro
+++ b/src/components/sections/Navbar.astro
@@ -3,9 +3,9 @@ import OpenStatus from "./OpenStatus.astro";
 import Links from "./Links.astro";
 import { officialStoreInfo } from "../../constants/storeInfo";
 
-import phone from "../../assets/phone.png";
-import mapPin from "../../assets/map-pin.png";
-import openSignBackground from "../../assets/openclose.png";
+import phone from "../../assets/phone.webp";
+import mapPin from "../../assets/map-pin.webp";
+import openSignBackground from "../../assets/openclose.webp";
 
 const phoneNumber = officialStoreInfo().phoneNumber;
 const address = officialStoreInfo().address;
