--- a/src/components/sections/Staff.astro
+++ b/src/components/sections/Staff.astro
@@ -11,7 +11,7 @@ const staffList = await officialStaffList();
   class="relative pb-10 tracking-wider text-center overflow-hidden -mt-48 mb-8 pt-56"
 >
   <img
-    src="src/assets/panel.png"
+    src="src/assets/panel.webp"
     alt="Wood paneling background"
     class="absolute z-[-2] bottom-0 w-full h-[85%] object-cover"
   />
