--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -97,7 +97,7 @@ const formatDate = (date: Date) => {
   }
 
   .bg {
-    background-image: url(/src/assets/blog-post-background.png);
+    /* background-image: url(/src/assets/blog-post-background.png); */
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom;
