--- a/src/components/sections/Products.astro
+++ b/src/components/sections/Products.astro
@@ -1,3 +1,7 @@
+---
+import Vendors from "../ui/Vendors";
+---
+
 <section
   id="products"
   class="md:mx-12 lg:mx-36 xl:mx-48 2xl:mx-64 min-[1700px]:mx-80 min-[1900px]:mx-110 -mt-36 pt-32 xl:pt-44"
@@ -8,33 +12,15 @@
     class="h-[130px] md:h-[160px] lg:h-[215px] w-auto mx-auto my-6 mt-16"
   />
   <p class="mx-10 sm:mx-16 md:mx-28 text-[#452B1F]">
-    Tortor vulputate netus nam sagittis, imperdiet pharetra porttitor taciti
-    maecenas. Metus posuere consectetur non fermentum lacus eget tempor feugiat
-    aenean. Lorem feugiat integer purus nullam penatibus faucibus semper
-    ridiculus dui. Dolor blandit laoreet nisi iaculis curae; primis posuere
-    tortor venenatis? Elit praesent tempor dictum fusce amet duis dictumst
-    laoreet tellus. Montes dignissim nam massa quam auctor nisl torquent congue
-    sit. Duis sodales volutpat turpis nostra morbi mus porttitor proin montes?
-    Scelerisque dis elit nostra accumsan viverra auctor dui nascetur congue. Et
-    porttitor eget mi nullam habitant fames odio sociis sed. Nunc velit dictum
-    odio posuere hac senectus posuere lectus nullam?
+    At PT Pet Supply, we’ve been dedicated to providing healthy, trustworthy
+    products for pets for over 20 years. From food and toys to essential
+    supplies, our selection is carefully curated to meet the needs of your furry
+    companions. Our knowledgeable team is here to help you make informed choices
+    for your pet’s health and happiness.
   </p>
   <div class="mx-5 py-10">
     <ul class="grid grid-cols-2 gap-4 text-center text-[#452B1F]">
-      <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-      <li>Aliquam tincidunt mauris eu risus.</li>
-      <li>Vestibulum auctor dapibus neque.</li>
-      <li>Nunc dignissim risus id metus.</li>
-      <li>Cras ornare tristique elit.</li>
-      <li>Vivamus vestibulum ntulla nec ante.</li>
-      <li>Praesent placerat risus quis eros.</li>
-      <li>Fusce pellentesque suscipit nibh.</li>
-      <li>Integer vitae libero ac risus egestas placerat.</li>
-      <li>Vestibulum commodo felis quis tortor.</li>
-      <li>Ut aliquam sollicitudin leo.</li>
-      <li>Cras iaculis ultricies nulla.</li>
-      <li>Donec quis dui at dolor tempor interdum.</li>
-      <li>Vivamus vestibulum ntulla nec ante.</li>
+      <Vendors client:load />
     </ul>
   </div>
   <div class="mx-6">
