--- a/src/components/layouts/Layout.astro
+++ b/src/components/layouts/Layout.astro
@@ -6,6 +6,7 @@ import { ViewTransitions } from "astro:transitions";
 import "@/styles/globals.css";
 import Footer from "../sections/Footer.astro";
 import GoogleMapsLoader from "../ui/GoogleMapsLoader.astro";
+import Analytics from "@vercel/analytics/astro";
 
 const apiKey = import.meta.env.PUBLIC_GOOGLE_API_KEY as string;
 ---
