--- a/src/components/sections/Contact.astro
+++ b/src/components/sections/Contact.astro
@@ -16,8 +16,9 @@ import StoreHours from "../ui/StoreHours";
 import ContactForm from "../ui/ContactForm";
 import { officialStoreHours } from "../../constants/storeInfo.js";
 import Map from "../ui/Map.astro";
-
-const backArrow = "../../../images/arrow.svg";
+import messageUsLogo from "../../assets/message-us.webp";
+import brassDivider from "../../assets/brass-divider.webp";
+import backArrow from "../../../images/arrow.svg";
 
 const storeHours: StoreHours | null = await officialStoreHours();
 ---
@@ -64,12 +65,12 @@ const storeHours: StoreHours | null = await officialStoreHours();
   >
     <div class="relative mt-3 text-center">
       <img
-        src="/src/assets/message-us.webp"
+        src={messageUsLogo.src}
         alt="Message Us sign"
         class="h-[150px] md:h-[180px] w-auto mx-auto mb-2"
       />
       <img
-        src="/src/assets/brass-divider.webp"
+        src={brassDivider.src}
         alt="Brass divider"
         class="h-[50px] md:h-[70px] w-auto mx-auto transform -scale-x-100 drop-shadow-2xl"
       />
@@ -82,7 +83,7 @@ const storeHours: StoreHours | null = await officialStoreHours();
           class="w-10 sm:w-12 h-10 sm:h-12 mt-6 bg-[#7F0201] text-white text-xl font-bold tracking-wider rounded-xl drop-shadow-2xl hover:bg-[#A52A2A] focus:outline-none focus:ring-2 focus:ring-gray-300"
         >
           <img
-            src={backArrow}
+            src={backArrow.src}
             alt="back arrow"
             class="w-6 sm:w-7 m-auto"
             style="filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(360deg) brightness(100%) contrast(100%); drop-shadow-2xl"
