--- a/src/components/sections/Grooming.astro
+++ b/src/components/sections/Grooming.astro
@@ -1,10 +1,14 @@
+---
+import groomingLogo from "../../assets/pet-grooming.webp";
+---
+
 <section
   id="grooming"
   class="md:mx-12 lg:mx-36 xl:mx-48 2xl:mx-64 min-[1700px]:mx-80 min-[1900px]:mx-110 min-h-[700px] -mt-36 mb-32 min-[1077px]:mb-48 min-[1298px]:mb-28 pt-44"
 >
   <img
-    src="/src/assets/pet-grooming.webp"
-    alt="Products logo"
+    src={groomingLogo.src}
+    alt="Pet Grooming logo"
     class="h-[150px] md:h-[180px] lg:h-[235px] w-auto mx-auto mb-6"
   />
   <p class="mx-10 sm:mx-16 md:mx-28 text-[#452B1F]">
