--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -1,6 +1,16 @@
 ---
 import Socials from "../ui/Socials.astro";
 import ExternalLinks from "../sections/ExternalLinks.astro";
+
+import brassHeroTop from "../../assets/brass-hero-top.webp";
+import logo from "../../assets/logo.webp";
+import addressSign from "../../assets/address-sign.webp";
+import horizonalChalkboard from "../../assets/horizontal-chalkboard.webp";
+import verticalChalkboard from "../../assets/vertical-chalkboard.webp";
+import maineCoon from "../../assets/mainecoon.webp";
+import husky from "../../assets/husky.webp";
+import landscape from "../../assets/landscape.webp";
+import fence from "../../assets/fence.png";
 ---
 
 <section
@@ -8,12 +18,12 @@ import ExternalLinks from "../sections/ExternalLinks.astro";
   class="relative mx-auto flex flex-col items-center min-h-[400px] max-w-none"
 >
   <img
-    src="/src/assets/brass-hero-top.webp"
+    src={brassHeroTop.src}
     alt="Brass fixture section divider"
     class="absolute top-6 object-cover h-1/4 md:h-1/3 xl:h-2/5 2xl:h-1/2 w-auto mx-auto"
   />
   <img
-    src="src/assets/logo.webp"
+    src={logo.src}
     alt="PT Pet Supply logo"
     class="absolute object-contain h-[255px] md:h-[300px] xl:h-[350px] 2xl:h-[440px] w-auto pt-2 drop-shadow-2xl z-10"
   />
@@ -24,7 +34,7 @@ import ExternalLinks from "../sections/ExternalLinks.astro";
     class="absolute top-60 md:top-70 xl:top-78 2xl:top-104"
   >
     <img
-      src="src/assets/address-sign.webp"
+      src={addressSign.src}
       alt="Address sign"
       class="object-contain h-[55px] md:h-[70px] xl:h-[80px] 2xl:h-[105px] w-auto drop-shadow-2xl -z-20"
     />
@@ -33,12 +43,12 @@ import ExternalLinks from "../sections/ExternalLinks.astro";
   <div class="flex flex-col justify-center items-center">
     <div class="chalkboard flex flex-col items-center">
       <img
-        src="/src/assets/horizontal-chalkboard.webp"
+        src={horizonalChalkboard.src}
         alt="Chalkboard"
         class="hidden md:block h-auto w-[500px] xl:w-[600px] 2xl:w-[700px] absolute -bottom-56 xl:-bottom-78 2xl:-bottom-120 mr-12 xl:mr-16"
       />
       <img
-        src="/src/assets/vertical-chalkboard.webp"
+        src={verticalChalkboard.src}
         alt="Chalkboard"
         class="block md:hidden w-[230px] absolute -bottom-68 -mx-5 mr-7"
       />
@@ -54,23 +64,23 @@ import ExternalLinks from "../sections/ExternalLinks.astro";
   </div>
 
   <img
-    src="/src/assets/mainecoon.webp"
+    src={maineCoon.src}
     alt="Maine Coon"
     class="absolute -bottom-14 xl:-bottom-32 2xl:-bottom-64 left-0 -ml-24 min-[380px]:-ml-16 min-[550px]:-ml-8 min-[610px]:-ml-4 min-[670px]:ml-2 md:-ml-28 min-[800px]:-ml-14 lg:ml-10 xl:ml-30 2xl:ml-24 min-[1650px]:ml-36 min-[1800px]:ml-48 min-[2000px]:ml-74 min-[320px]:h-[330px] min-[475px]:h-[370px] md:h-[480px] xl:h-[600px] drop-shadow-2xl w-auto max-h-[700px] object-contain -mb-48 md:-mb-80"
   />
   <img
-    src="/src/assets/husky.webp"
+    src={husky.src}
     alt="Siberian Husky"
     class="absolute -bottom-14 xl:-bottom-32 2xl:-bottom-64 right-0 -mr-28 min-[380px]:-mr-20 min-[550px]:-mr-12 min-[610px]:-mr-6 min-[670px]:-mr-0 md:-mr-32 min-[800px]:-mr-20 lg:mr-4 xl:mr-30 2xl:mr-20 min-[1650px]:mr-32 min-[1800px]:mr-44 min-[2000px]:mr-70 min-[320px]:h-[330px] min-[475px]:h-[370px] md:h-[480px] xl:h-[600px] drop-shadow-2xl w-auto max-h-[700px] object-contain -mb-48 md:-mb-80"
   />
 
   <img
-    src="/src/assets/landscape.webp"
+    src={landscape.src}
     alt="Background landscape"
     class="absolute inset-0 left-1/2 transform -translate-x-1/2 w-full h-full xl:h-[450px] 2xl:h-[570px] object-cover z-[-2]"
   />
   <img
-    src="/src/assets/fence.png"
+    src={fence.src}
     alt="Background picket fence"
     class="absolute bottom-14 2xl:-bottom-4 left-1/2 transform -translate-x-1/2 w-full h-[63%] xl:h-[69%] 2xl:h-[95%] max-w-none object-cover -mb-28 md:-mb-36 xl:-mb-48 2xl:-mb-72 z-[-1]"
   />
