--- a/src/components/sections/Links.astro
+++ b/src/components/sections/Links.astro
@@ -1,5 +1,6 @@
 ---
 import Button from "../ui/Button.astro";
+import sidebar from "../../assets/sidebar.webp";
 ---
 
 <!-- Main container with Alpine.js logic -->
@@ -65,7 +66,7 @@ import Button from "../ui/Button.astro";
     class="fixed top-0 right-0 w-3/5 md:w-1/3 max-w-full h-full bg-white shadow-lg transform z-50 xl:w-64 overflow-hidden text-xl"
   >
     <img
-      src="/src/assets/sidebar.webp"
+      src={sidebar.src}
       alt="Barn panelling"
       class="absolute h-[100vh] w-[100vw] object-cover z-[-10] overflow-hidden"
     />
