--- a/src/components/sections/Testimonials.astro
+++ b/src/components/sections/Testimonials.astro
@@ -4,6 +4,8 @@ interface TestimonialsProps {
 }
 
 import Reviews from "../ui/Reviews";
+import facebookLogo from "../../assets/facebook-logo.png";
+import googleLogo from "../../assets/google-logo.png";
 
 const businessId = "ChIJbRNMI9ce5IkRwHQCQEtkMA4";
 
@@ -25,11 +27,7 @@ const { apiKey } = Astro.props as TestimonialsProps;
       rel="noopener noreferrer"
       class="inline-flex items-center justify-center px-3 py-1.5 bg-[#7F0201] text-white text-xl font-bold tracking-wider rounded-xl drop-shadow-2xl hover:bg-[#A52A2A] focus:outline-none focus:ring-2 focus:ring-gray-300"
     >
-      <img
-        src="src/assets/facebook-logo.png"
-        alt="Facebook Logo"
-        class="w-5 h-5 mr-2"
-      />
+      <img src={facebookLogo.src} alt="Facebook Logo" class="w-5 h-5 mr-2" />
       Facebook
     </a>
     <a
@@ -38,11 +36,7 @@ const { apiKey } = Astro.props as TestimonialsProps;
       rel="noopener noreferrer"
       class="inline-flex items-center justify-center px-3 py-1.5 bg-[#7F0201] text-white text-xl font-bold tracking-wider rounded-xl drop-shadow-2xl hover:bg-[#A52A2A] focus:outline-none focus:ring-2 focus:ring-gray-300"
     >
-      <img
-        src="src/assets/google-logo.png"
-        alt="Google Logo"
-        class="w-5 h-5 mr-2"
-      />
+      <img src={googleLogo.src} alt="Google Logo" class="w-5 h-5 mr-2" />
       Google
     </a>
   </div>
