--- a/src/components/sections/Products.astro
+++ b/src/components/sections/Products.astro
@@ -21,7 +21,7 @@ import divider from "../../assets/divider.webp";
     for your pet’s health and happiness.
   </p>
   <div class="mx-5 py-10">
-    <ul class="grid grid-cols-2 gap-4 text-center text-[#452B1F]">
+    <ul class="flex-row justify-center text-center text-[#452B1F]">
       <Vendors client:load />
     </ul>
   </div>
