--- a/src/pages/admin.astro
+++ b/src/pages/admin.astro
@@ -5,7 +5,7 @@ import UpdateHours from "../components/ui/UpdateHours.tsx";
 import DraftPost from "../components/ui/DraftPost.tsx";
 // import AdminStaffGrid from "../components/ui/AdminStaffGrid.tsx";
 
-import backArrow from "../../images/arrow.svg";
+const backArrow = "../../../images/arrow.svg";
 
 import {
   // officialStaffList,
@@ -32,7 +32,7 @@ const allTags = await getCollection("blog").then((collection) => {
       onclick="window.location.href = '/'"
     >
       <img
-        src={backArrow.src}
+        src={backArrow}
         alt="Back Arrow"
         class="w-4 my-0"
         style="filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(360deg) brightness(100%) contrast(100%);"
