--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -123,8 +123,8 @@ html {
 
 .tabs {
   display: flex;
-  gap: 1rem;
-  padding: 1rem;
+  padding: .25rem;
+  background: #FFC66D;
 }
 
 .tab {
@@ -132,16 +132,12 @@ html {
   border: none;
   background: transparent;
   cursor: pointer;
-  font-size: 1rem;
-}
-
-.tab.active {
-  color: #2196F3;
+  color: black;
 }
 
 .vendors-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
   gap: 1rem;
   padding: 1rem;
 }
